<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.login_screen.LoginFragment">

    <data>

        <variable
            name="viewmodel"
            type="com.sandbox.rader.ui.MainViewModel" />

        <variable
            name="fragment"
            type="com.sandbox.rader.ui.login_screen.LoginFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:boxBackgroundColor="@null"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietUserName"
                android:layout_width="match_parent"


                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_username"
                android:text="@={viewmodel.userName}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"

            app:boxBackgroundColor="@null"

            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilUserName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_enter_password"
                android:text="@={viewmodel.password}" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:backgroundTint="#2196f3"
            android:onClick="@{() -> viewmodel.login()}"
            android:text="@string/button_title_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

        <TextView
            android:id="@+id/tvLabelDontHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:textSize="22sp"
            android:text="@string/label_dont_have_account"
            app:layout_constraintEnd_toStartOf="@+id/tvSignUp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button" />

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:onClick="@{() -> fragment.handleRegistrationScreen()}"
            android:text="@string/label_sign_up"
            android:textColor="#2196f3"
            android:textSize="22sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvLabelDontHaveAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvLabelDontHaveAccount" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>